--- a/front/src/styles/globals.css
+++ b/front/src/styles/globals.css
@@ -4,11 +4,11 @@
 @tailwind utilities;
 
 .sidebar {
-  @apply w-64 bg-gray-200 shadow flex-col justify-between;
+  @apply w-64 bg-green-300 shadow flex-col justify-between;
 }
 
 .sidebar-route {
-  @apply rounded-md flex w-full justify-between cursor-pointer items-center m-3 p-3;
+  @apply  rounded-md flex w-full justify-between cursor-pointer items-center m-3 p-3;
 }
 
 .input {
